src/test/ui/resolve/issue-21221-1.stderr
error[E0405]: cannot find trait `Mul` in this scope
  --> $DIR/issue-21221-1.rs:53:6
   |
53 | impl Mul for Foo {
   |      ^^^ not found in this scope
   |
   = help: possible candidates are found in other modules, you can import them into scope:
             `use mul1::Mul;`
             `use mul2::Mul;`
             `use std::ops::Mul;`

error[E0412]: cannot find type `Mul` in this scope
  --> $DIR/issue-21221-1.rs:72:16
   |
72 | fn getMul() -> Mul {
   |                ^^^ not found in this scope
   |
   = help: possible candidates are found in other modules, you can import them into scope:
             `use mul1::Mul;`
             `use mul2::Mul;`
             `use mul3::Mul;`
             `use mul4::Mul;`
           and 2 other candidates

error[E0405]: cannot find trait `ThisTraitReallyDoesntExistInAnyModuleReally` in this scope
  --> $DIR/issue-21221-1.rs:83:6
   |
83 | impl ThisTraitReallyDoesntExistInAnyModuleReally for Foo {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `Div` in this scope
  --> $DIR/issue-21221-1.rs:88:6
   |
88 | impl Div for Foo {
   |      ^^^ not found in this scope
   |
   = help: possible candidate is found in another module, you can import it into scope:
             `use std::ops::Div;`

error: cannot continue compilation due to previous error

